DEV: mock OCR hardening + in-memory status; CORS first; README + env examples

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,15 @@
-SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_KEY=
+# Supabase (server-side)
+SUPABASE_URL=https://<your-project-ref>.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=sb_secret_<redacted>   # server-only, NEVER in frontend
+SUPABASE_ANON_KEY=sb_publishable_<optional>      # optional; server can call public endpoints
 SUPABASE_BUCKET=submissions
-CORS_ALLOW_ORIGINS=http://localhost:5173
-OCR_PROVIDER=hf
-OCR_MOCK=0
-HF_TOKEN=
-HF_API_URL=https://api-inference.huggingface.co/models/<modelId>
+
+# OCR / Dev toggles
+OCR_PROVIDER=mock        # mock | hf | (future providers)
+OCR_MOCK=1               # 1 = always return mock text (useful in DEV)
+HF_TOKEN=<optional>
+DEV_MODE=1               # 1 = relaxed CORS + mock-friendly paths
+
+# CORS / Frontend origin
+FRONTEND_ORIGIN=http://localhost:5173
+
