OCR smoke working: env loader, CORS, start/status, UI done badge

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,10 +5,15 @@ SUPABASE_ANON_KEY=sb_publishable_<optional>      # optional; server can call pub
 SUPABASE_BUCKET=submissions
 
 # OCR / Dev toggles
-OCR_PROVIDER=mock        # mock | hf | (future providers)
+OCR_PROVIDER=mock        # mock | hf | trocr_local
 OCR_MOCK=1               # 1 = always return mock text (useful in DEV)
 HF_TOKEN=<optional>
 DEV_MODE=1               # 1 = relaxed CORS + mock-friendly paths
+
+# Local TrOCR options (when OCR_PROVIDER=trocr_local)
+OCR_MODEL=microsoft/trocr-base-handwritten  # or microsoft/trocr-base-printed
+OCR_MODE=single                             # single | auto
+OCR_DEBUG=0                                 # 1 for verbose provider logs
 
 # CORS / Frontend origin
 FRONTEND_ORIGIN=http://localhost:5173
